Optimal codes for IPM with n=2 and k=8.

--- a/ipm_codes_n2k8.ipynb
+++ b/ipm_codes_n2k8.ipynb
@@ -95,7 +95,7 @@
    "source": [
     "### 1.2 Defining styles of dataframe\n",
     "\n",
-    "We borrow the following setting of dataframe from https://mode.com/example-gallery/python_dataframe_styling/"
+    "See more setting of dataframe from https://mode.com/example-gallery/python_dataframe_styling/"
    ]
   },
   {
@@ -104,7 +104,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Set CSS properties for th, td and caption elements in dataframe\n",
+    "# Set properties for th, td and caption elements in dataframe\n",
     "th_props = [('font-size', '14px'), ('text-align', 'left'), ('font-weight', 'bold'), ('background-color', '#E0E0E0')]\n",
     "td_props = [('font-size', '13px'), ('text-align', 'left'), ('min-width', '80px')]\n",
     "cp_props = [('font-size', '16px'), ('text-align', 'center')]\n",
