--- a/ipm_codes_n2k8.ipynb
+++ b/ipm_codes_n2k8.ipynb
@@ -15,9 +15,10 @@
    "source": [
     "Parameters:\n",
     "\n",
-    "- $Z=(X + L_2Y_2, Y_2)$ where $X, Y$ and $Z$ are the sensitive variable, a mask and the protected variable, respectively\n",
+    "- $Z=(X + L_2Y_2, Y_2)=X\\mathbf{G} + Y\\mathbf{H}$ where $X, Y$ and $Z$ are the sensitive variable, a mask and the protected variable, respectively. $\\mathbf{G} = [1, 0]$ and $\\mathbf{H} = [L_2, 1]$ are two generator matrices of codes $\\mathcal{C}$ and $\\mathcal{D}$, resp.\n",
     "- $L_2\\in \\mathbb{F}_{2^\\ell}\\backslash\\{0\\}$, thus there are 255 linear codes for IPM\n",
-    "- Each element over $\\mathbb{F}_{2^\\ell}$ can be denoted as $\\alpha^i$ where $i\\in\\{0, 1, \\ldots, 254\\}$"
+    "- Each element over $\\mathbb{F}_{2^\\ell}$ can be denoted as $\\alpha^i$ where $i\\in\\{0, 1, \\ldots, 254\\}$\n",
+    "- $\\mathbf{H}^\\perp = [1, L_2]$ is the generator matirx of dual code $\\mathcal{D}^\\perp$"
    ]
   },
   {
@@ -5139,8 +5140,8 @@
     "\n",
     "As shown in our paper, the codes satifying two conditions are optimal:\n",
     "\n",
-    "- Maximizing $d_{\\mathcal{D}}^\\perp$, here the $\\max\\{d_{\\mathcal{D}}^\\perp\\} = 4$\n",
-    "- Minimizing $B_{d_{\\mathcal{D}}^\\perp}$, here the $\\min\\{B_{d_{\\mathcal{D}}^\\perp}\\} = 3$\n",
+    "- Maximizing $d_{\\mathcal{D}}^\\perp$, here $\\max\\{d_{\\mathcal{D}}^\\perp\\} = 4$\n",
+    "- Minimizing $B_{d_{\\mathcal{D}}^\\perp}$, here $\\min\\{B_{d_{\\mathcal{D}}^\\perp}\\} = 3$\n",
     "\n",
     "Note that we use two leakage detection metrics **SNR** (signal-to-noise ratio) and **MI** (mutual information), and one leakage exploitation metric **SR** (success rate) to assess the side-channel resistance of IPM with different codes."
    ]
@@ -5165,46 +5166,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<style  type=\"text/css\" >\n",
-       "    #T_9022060a_41b7_11ea_922b_144f8ad8692b th {\n",
+       "    #T_bcaf291a_41c9_11ea_8477_144f8ad8692b th {\n",
        "          font-size: 14px;\n",
        "          text-align: left;\n",
        "          font-weight: bold;\n",
        "          background-color: #E0E0E0;\n",
-       "    }    #T_9022060a_41b7_11ea_922b_144f8ad8692b td {\n",
+       "    }    #T_bcaf291a_41c9_11ea_8477_144f8ad8692b td {\n",
        "          font-size: 13px;\n",
        "          text-align: left;\n",
        "          min-width: 80px;\n",
-       "    }    #T_9022060a_41b7_11ea_922b_144f8ad8692b caption {\n",
+       "    }    #T_bcaf291a_41c9_11ea_8477_144f8ad8692b caption {\n",
        "          font-size: 16px;\n",
        "          text-align: center;\n",
-       "    }    #T_9022060a_41b7_11ea_922b_144f8ad8692brow0_col1 {\n",
+       "    }    #T_bcaf291a_41c9_11ea_8477_144f8ad8692brow0_col1 {\n",
        "            background-color:  #ff0000;\n",
        "            color:  #f1f1f1;\n",
-       "        }    #T_9022060a_41b7_11ea_922b_144f8ad8692brow0_col2 {\n",
+       "        }    #T_bcaf291a_41c9_11ea_8477_144f8ad8692brow0_col2 {\n",
        "            background-color:  #ff0000;\n",
        "            color:  #f1f1f1;\n",
-       "        }</style><table id=\"T_9022060a_41b7_11ea_922b_144f8ad8692b\" ><caption>Tab. III A BKLC code for IPM with $d_{\\mathcal{D}}^\\perp=5$.</caption><thead>    <tr>        <th class=\"blank level0\" ></th>        <th class=\"col_heading level0 col0\" >$L_2$</th>        <th class=\"col_heading level0 col1\" >$d_{\\mathcal{D}}^\\perp$</th>        <th class=\"col_heading level0 col2\" >$B_{d_{\\mathcal{D}}^\\perp}$</th>        <th class=\"col_heading level0 col3\" >Weight Enumerators</th>    </tr></thead><tbody>\n",
+       "        }</style><table id=\"T_bcaf291a_41c9_11ea_8477_144f8ad8692b\" ><caption>Tab. III A BKLC code for IPM with $d_{\\mathcal{D}}^\\perp=5$.</caption><thead>    <tr>        <th class=\"blank level0\" ></th>        <th class=\"col_heading level0 col0\" >$L_2$</th>        <th class=\"col_heading level0 col1\" >$d_{\\mathcal{D}}^\\perp$</th>        <th class=\"col_heading level0 col2\" >$B_{d_{\\mathcal{D}}^\\perp}$</th>        <th class=\"col_heading level0 col3\" >Weight Enumerators</th>    </tr></thead><tbody>\n",
        "                <tr>\n",
-       "                        <th id=\"T_9022060a_41b7_11ea_922b_144f8ad8692blevel0_row0\" class=\"row_heading level0 row0\" >0</th>\n",
-       "                        <td id=\"T_9022060a_41b7_11ea_922b_144f8ad8692brow0_col0\" class=\"data row0 col0\" >$\\alpha^{255}$</td>\n",
-       "                        <td id=\"T_9022060a_41b7_11ea_922b_144f8ad8692brow0_col1\" class=\"data row0 col1\" >5</td>\n",
-       "                        <td id=\"T_9022060a_41b7_11ea_922b_144f8ad8692brow0_col2\" class=\"data row0 col2\" >24</td>\n",
-       "                        <td id=\"T_9022060a_41b7_11ea_922b_144f8ad8692brow0_col3\" class=\"data row0 col3\" >[0, 1, 5, 24, 6, 44, 7, 40, 8, 45, 9, 40, 10, 28, 11, 24, 12, 10]</td>\n",
+       "                        <th id=\"T_bcaf291a_41c9_11ea_8477_144f8ad8692blevel0_row0\" class=\"row_heading level0 row0\" >0</th>\n",
+       "                        <td id=\"T_bcaf291a_41c9_11ea_8477_144f8ad8692brow0_col0\" class=\"data row0 col0\" >  --</td>\n",
+       "                        <td id=\"T_bcaf291a_41c9_11ea_8477_144f8ad8692brow0_col1\" class=\"data row0 col1\" >5</td>\n",
+       "                        <td id=\"T_bcaf291a_41c9_11ea_8477_144f8ad8692brow0_col2\" class=\"data row0 col2\" >24</td>\n",
+       "                        <td id=\"T_bcaf291a_41c9_11ea_8477_144f8ad8692brow0_col3\" class=\"data row0 col3\" >[0, 1, 5, 24, 6, 44, 7, 40, 8, 45, 9, 40, 10, 28, 11, 24, 12, 10]</td>\n",
        "            </tr>\n",
        "    </tbody></table>"
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x1bac9b18f60>"
+       "<pandas.io.formats.style.Styler at 0x1bac9c0b0f0>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5212,7 +5213,7 @@
    "source": [
     "bklc_index = [255]\n",
     "cm_3 = sns.light_palette(\"red\", as_cmap=True, reverse=True)\n",
-    "df_bklc = pd.DataFrame({'$L_2$': np.array(alpha_all)[-1], '$d_{\\mathcal{D}}^\\perp$': d_all[-1], '$B_{d_{\\mathcal{D}}^\\perp}$': B_all[-1], 'Weight Enumerators': wd[bklc_index]})\n",
+    "df_bklc = pd.DataFrame({'$L_2$': ['  --'], '$d_{\\mathcal{D}}^\\perp$': d_all[-1], '$B_{d_{\\mathcal{D}}^\\perp}$': B_all[-1], 'Weight Enumerators': wd[bklc_index]})\n",
     "\n",
     "(df_bklc.style\n",
     "    .background_gradient(cmap=cm_3, subset=['$d_{\\mathcal{D}}^\\perp$', '$B_{d_{\\mathcal{D}}^\\perp}$'])\n",
