Adding analysis of n=3 shares and l=8 bits.

--- a/ipm_codes_n3k8.ipynb
+++ b/ipm_codes_n3k8.ipynb
@@ -16,7 +16,7 @@
     "Parameters:\n",
     "\n",
     "- $Z=(X + L_2Y_2 + L_3Y_3, Y_2, Y_3)=X\\mathbf{G} + Y\\mathbf{H}$ where $X, Y=(Y_2, Y_3)$ and $Z$ are the sensitive variable, a mask and the protected variable, respectively. $\\mathbf{G} = [1, 0, 0]$ and $\\mathbf{H} = [[L_2, 1, 0], [L_3, 0, 1]]$ are two generator matrices of codes $\\mathcal{C}$ and $\\mathcal{D}$, resp.\n",
-    "- $L_2, L_3\\in \\mathbb{F}_{2^\\ell}\\backslash\\{0\\}$, thus there are 255*255=65025 linear codes for IPM. In order to save space, we take $L_2\\leq L_3$ and $L_2=\\alpha^i$ where $i\\in \\{0, 1, \\ldots, 255\\}$ (note that $\\alpha^0=\\alpha^{255}$ in $\\mathbb{F}_{2^8}$).As a consequence, we have 32896 entries and one more for BKLC codes with parameter [24, 8, 8].\n",
+    "- $L_2, L_3\\in \\mathbb{F}_{2^\\ell}\\backslash\\{0\\}$, thus there are 255*255=65025 linear codes for IPM. In order to save spaces, we take $L_2\\leq L_3$ and $L_2=\\alpha^i$ where $i\\in \\{0, 1, \\ldots, 255\\}$ (note that $\\alpha^0=\\alpha^{255}$ in $\\mathbb{F}_{2^8}$). As a consequence, we have 32896 entries and one more for BKLC codes with parameter [24, 8, 8].\n",
     "- Each element over $\\mathbb{F}_{2^\\ell}$ can be denoted as $\\alpha^i$ where $i\\in\\{0, 1, \\ldots, 254\\}$\n",
     "- $\\mathbf{H}^\\perp = [1, L_2, L_3]$ is the generator matirx of dual code $\\mathcal{D}^\\perp$"
    ]
