Add the reference link to BKLC codes.

--- a/ipm_codes_n2k8.ipynb
+++ b/ipm_codes_n2k8.ipynb
@@ -17,7 +17,7 @@
     "\n",
     "- $Z=(X + L_2Y_2, Y_2)=X\\mathbf{G} + Y\\mathbf{H}$ where $X, Y=(Y_2)$ and $Z$ are the sensitive variable, a mask and the protected variable, respectively. $\\mathbf{G} = [1, 0]$ and $\\mathbf{H} = [L_2, 1]$ are two generator matrices of codes $\\mathcal{C}$ and $\\mathcal{D}$, resp.\n",
     "- $L_2\\in \\mathbb{F}_{2^\\ell}\\backslash\\{0\\}$, thus there are 255 linear codes for IPM\n",
-    "- Each element over $\\mathbb{F}_{2^\\ell}$ can be denoted as $\\alpha^i$ where $i\\in\\{0, 1, \\ldots, 254\\}$\n",
+    "- Each element over $\\mathbb{F}_{2^\\ell}$ can be denoted as $\\alpha^i$ where $i\\in\\{0, 1, \\ldots, 254\\}$, the corresponding irreducible polynomial is $g(\\alpha) = \\alpha^8 +\\alpha^4 + \\alpha^3 + \\alpha^2 +1$ (NOT the one in AES)\n",
     "- $\\mathbf{H}^\\perp = [1, L_2]$ is the generator matirx of dual code $\\mathcal{D}^\\perp$"
    ]
   },
