--- a/ipm_codes_n3k4.ipynb
+++ b/ipm_codes_n3k4.ipynb
@@ -17,7 +17,7 @@
     "\n",
     "- $Z=(X + L_2Y_2 + L_3Y_3, Y_2, Y_3)=X\\mathbf{G} + Y\\mathbf{H}$ where $X, Y=(Y_2, Y_3)$ and $Z$ are the sensitive variable, a mask and the protected variable, respectively. $\\mathbf{G} = [1, 0, 0]$ and $\\mathbf{H} = [[L_2, 1, 0], [L_3, 0, 1]]$ are two generator matrices of codes $\\mathcal{C}$ and $\\mathcal{D}$, resp.\n",
     "- $L_2, L_3\\in \\mathbb{F}_{2^\\ell}\\backslash\\{0\\}$, thus there are 15*15=225 linear codes for IPM\n",
-    "- Each element over $\\mathbb{F}_{2^\\ell}$ can be denoted as $\\alpha^i$ where $i\\in\\{0, 1, \\ldots, 14\\}$\n",
+    "- Each element over $\\mathbb{F}_{2^\\ell}$ can be denoted as $\\alpha^i$ where $i\\in\\{0, 1, \\ldots, 14\\}$, the corresponding irreducible polynomial is $g(\\alpha) = \\alpha^4 + \\alpha +1$\n",
     "- $\\mathbf{H}^\\perp = [1, L_2, L_3]$ is the generator matirx of dual code $\\mathcal{D}^\\perp$"
    ]
   },
