Fix a typo for BKLC codes.

--- a/optimal_codes/ipm_codes_n3k8.ipynb
+++ b/optimal_codes/ipm_codes_n3k8.ipynb
@@ -1757,7 +1757,9 @@
    "source": [
     "### 2.3 BKLC code with parameter $[24, 8, 8]$\n",
     "\n",
-    "BKLC is the short of Best Known Linear Code. Note that the code $[24, 8, 8]$ is unique."
+    "The BKLC is the short of Best Known Linear Code. Note that the code $[24, 8, 8]$ is NOT unique.\n",
+    "\n",
+    "*The BKLC is defined as An [n, k] linear code $\\mathcal{C}$ is said to be a best known linear [n, k] code (BKLC) if $\\mathcal{C}$ has the highest minimum weight among all known [n, k] linear codes.[See definition from Magma.](http://www.enseignement.polytechnique.fr/profs/informatique/Eric.Schost/X2002/Maj1/htmlhelp/text1263.htm)*"
    ]
   },
   {
