--- a/optimal_codes/ipm_codes_n2k8.ipynb
+++ b/optimal_codes/ipm_codes_n2k8.ipynb
@@ -5299,7 +5299,9 @@
     "\n",
     "BKLC is the short of Best Known Linear Code. \n",
     "\n",
-    "**Note that the code $[16, 8, 5]$ is unique.**"
+    "**Note that the code $[16, 8, 5]$ is unique.**\n",
+    "\n",
+    "*The BKLC is defined as An [n, k] linear code $\\mathcal{C}$ is said to be a best known linear [n, k] code (BKLC) if $\\mathcal{C}$ has the highest minimum weight among all known [n, k] linear codes.[See definition from Magma.](http://www.enseignement.polytechnique.fr/profs/informatique/Eric.Schost/X2002/Maj1/htmlhelp/text1263.htm)*"
    ]
   },
   {
