--- a/optimal_codes/ipm_codes_n3k4.ipynb
+++ b/optimal_codes/ipm_codes_n3k4.ipynb
@@ -4015,7 +4015,9 @@
    "source": [
     "### 2.3 BKLC code with parameter $[12, 4, 6]$\n",
     "\n",
-    "BKLC is the short of Best Known Linear Code. Note that the code $[12, 4, 6]$ is unique."
+    "BKLC is the short of Best Known Linear Code. Note that the code $[12, 4, 6]$ is unique.\n",
+    "\n",
+    "*The BKLC is defined as An [n, k] linear code $\\mathcal{C}$ is said to be a best known linear [n, k] code (BKLC) if $\\mathcal{C}$ has the highest minimum weight among all known [n, k] linear codes.[See definition from Magma.](http://www.enseignement.polytechnique.fr/profs/informatique/Eric.Schost/X2002/Maj1/htmlhelp/text1263.htm)*"
    ]
   },
   {
